[Modal] Fix Stack wrapping on Modal.Header title (#1653)
* Fix Stack wrapping on Modal.Header title

* Align Modal close button on top

--- a/src/components/Modal/components/Header/Header.scss
+++ b/src/components/Modal/components/Header/Header.scss
@@ -1,4 +1,6 @@
 .Header {
+  display: flex;
+  align-items: flex-start;
   padding: spacing() spacing(loose);
   border-bottom: border();
 }
@@ -10,6 +12,7 @@
 
 .CloseButton {
   @include unstyled-button;
+  margin-left: spacing(loose);
   margin-right: -1 * spacing(tight);
   padding: spacing(tight);
 
@@ -17,5 +20,15 @@
   &:active {
     border-radius: border-radius(large);
     background: plain-button-background();
+  }
+}
+
+.Title {
+  flex: 1;
+  margin-top: spacing(extra-tight);
+  word-break: break-word;
+
+  @include breakpoint-after($typography-condensed) {
+    margin-top: rem(2px);
   }
 }
